fix: レンダラーをP2Dにしてもエラーが発生しないように修正